--- a/Exercici09.css
+++ b/Exercici09.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("fons.png");
+  background-image: url("Birthday-Cake-.png");
   color: #615041;
   font-size: arial;
 }
